Working version
---------------

### Language features:


### Runtime system:

- #9508: Remove support for FreeBSD prior to 4.0R, that required explicit
  floating-point initialization to behave like IEEE standard
  (Hannes Mehnert, review by David Allsopp)

### Code generation and optimizations:

- #9441: Add RISC-V RV64G native-code backend.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

### Standard library:


### Other libraries:

* #9206, #9419: update documentation of the threads library;
  deprecate Thread.kill, Thread.wait_read, Thread.wait_write,
  and the whole ThreadUnix module.
  (Xavier Leroy, review by Florian Angeletti, Guillaume Munch-Maccagnoni,
   and Gabriel Scherer)

### Tools:


### Manual and documentation:


### Compiler user-interface and warnings:


### Internal/compiler-libs changes:

- #9493: refactor the pattern-matching compiler
  (Thomas Refis and Gabriel Scherer, review by Florian Angeletti)

### Build system:

- #9332, #9518: Cease storing C dependencies in the codebase. C dependencies are
  generated on-the-fly in development mode. For incremental compilation, the
  MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

### Bug fixes:


OCaml 4.11
----------

(Changes that can break existing programs are marked with a "*")

### Language features

- #8820, #9166: quoted extensions: {%foo|...|} is lighter syntax for
  [%foo {||}], and {%foo bar|...|bar} for [%foo {bar|...|bar}].
  (Gabriel Radanne, Leo White, Gabriel Scherer and Pieter Goetschalckx,
   request by Bikal Lem)

- #6673, #1132: Relax the handling of explicit polymorphic types
  (Leo White, review by Jacques Garrigue and Gabriel Scherer)

- #9232: allow any class type paths in #-types,
  For instance, "val f: #F(X).t -> unit" is now allowed.
  (Florian Angeletti, review by Gabriel Scherer, suggestion by Leo White)

- MPR#7364, GPR#2188: improvement of the unboxability check for types